<resources>
    <string name="app_name">calculator</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="add">+</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="reduce">-</string>
    <string name="b7">7</string>
    <string name="b8">8</string>b_
    <string name="b9">9</string>
    <string name="multiply">*</string>
    <string name="b0">0</string>
    <string name="bit">.</string>
    <string name="ac">AC</string>
    <string name="division">/</string>
    <string name="equal">=</string>
    <string name="back">←</string>

</resources>
