<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inputBox"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:textSize="40sp" />
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:columnCount="4"
            android:rowCount="5">

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFB6C1"
                android:text="@string/back"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFE4B5"
                android:text="@string/add"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/reduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFE4B5"
                android:text="@string/reduce"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/bit"
                android:textSize="30sp" />

            <Button
                android:id="@+id/b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/b0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffff"
                android:text="@string/ac"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFE4B5"
                android:text="@string/multiply"
                android:textSize="30sp" />

            <Space />

            <Space />

            <Button
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#d3d3d3"
                android:text="@string/equal"
                android:textSize="30sp"
                />

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFE4B5"
                android:text="@string/division"
                android:textSize="30sp" />

        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>